bk_ida/gccida/g2/exact_real_inverse
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1633:26: error: must use 'enum' tag to refer to type 'machine_mode'
int  exact_real_inverse( machine_mode mode, realvaluetype *r) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1683:12: error: expected expression
*( _OWORD *)&v12.r[1] = *( unsigned int *)&einv[4]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1683:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12.r[1] = *( unsigned int *)&einv[4]; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1685:38: error: passing 'enum machine_mode' to parameter of incompatible type 'realvaluetype'
real_value_truncate( ( __int64)&v13, mode, v12); 
                                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1687:23: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)einv = v13.m128i_i64[0]; 
                   ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1690:26: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _DWORD *)&einv[4] = v4.m128i_i32[2]; 
                       ~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/real.c:1691:8: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( v4.m128i_i16[4] == ( __int16)0x8000 ) 
     ~~^~~~~~~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/exact_real_inverse/src/obj/real.o] Error 1
